# simple-bevy-games

./: README.md  justfile
docs/: index.html  pong.js
docs/assets/: background.wgsl
pong/: Cargo.toml
pong/assets/: background.wgsl
pong/src/: ball.rs  collisions.rs  config.rs  level.rs  main.rs  player.rs  scoreboard.rs  sounds.rs
